1、修改引领时语言重复播报问题 2、修改点击暂停。并且急停之后，再松开，会顶着暂停页面走的bug 3、添加云平台拉取机器人日志的报文 4、修改成对接充电桩之后才能接收到配置更新的报文，防止丢定位 5、修改设置底盘时间的方法 6、设置mMediaPlayer数据源,从调用prepare()改为prepareAsync()防止线程阻塞 7、添加急停按下的时候语音播报暂停，松开的时候继续 8、修改讲解倒计时结束时的方法 9、设置页面中添加地盘版本信息 10、人脸检测修改成检测到人脸五秒之后才会播报一次语音，注释人脸识别代码 11、轮播图&视频添加加载动画 12、添加讲解结束的二次确认按钮

--- a/app/src/main/res/layout/fragment_about_me_setting.xml
+++ b/app/src/main/res/layout/fragment_about_me_setting.xml
@@ -44,7 +44,7 @@
                     android:id="@+id/view3"
                     android:layout_marginTop="@dimen/sp_24"
                     android:layout_width="@dimen/dp_1010"
-                    android:layout_height="528dp"
+                    android:layout_height="638dp"
                     android:background="@drawable/setting_item_bg"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -127,6 +127,31 @@
                     app:layout_constraintTop_toTopOf="@+id/textView44" />
 
                 <TextView
+                    android:id="@+id/tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/dp_63"
+                    android:alpha="0.6"
+                    android:text="@string/Robot_version"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/sp_28"
+                    app:layout_constraintStart_toStartOf="@+id/textView44"
+                    app:layout_constraintTop_toBottomOf="@+id/textView44" />
+
+                <TextView
+                    android:id="@+id/RobotVersion"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="@dimen/dp_32"
+                    android:alpha="0.6"
+                    android:text="@{version}"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/sp_28"
+                    app:layout_constraintBottom_toBottomOf="@+id/tv"
+                    app:layout_constraintEnd_toEndOf="@+id/view3"
+                    app:layout_constraintTop_toTopOf="@+id/tv" />
+
+                <TextView
                     android:id="@+id/textView46"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -135,8 +160,8 @@
                     android:text="@string/System_version"
                     android:textColor="@color/white"
                     android:textSize="@dimen/sp_28"
-                    app:layout_constraintStart_toStartOf="@+id/textView44"
-                    app:layout_constraintTop_toBottomOf="@+id/textView44" />
+                    app:layout_constraintStart_toStartOf="@+id/tv"
+                    app:layout_constraintTop_toBottomOf="@+id/tv" />
 
                 <TextView
                     android:id="@+id/textViewRobotVersion"
