--- a/app/src/main/res/layout/explanation_item.xml
+++ b/app/src/main/res/layout/explanation_item.xml
@@ -22,7 +22,7 @@
         android:layout_width="287dp"
         android:layout_height="@dimen/dp_334"
         android:layout_marginTop="14dp"
-        android:scaleType="fitXY"
+        android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="@+id/view"
         app:layout_constraintStart_toStartOf="@+id/view"
         app:layout_constraintTop_toTopOf="@+id/view" />
