--- a/app/src/main/res/layout/fragment_catalogue_explantion.xml
+++ b/app/src/main/res/layout/fragment_catalogue_explantion.xml
@@ -54,7 +54,7 @@
             android:layout_marginStart="@dimen/dp_32"
             android:layout_marginTop="@dimen/dp_32"
             android:layout_marginEnd="@dimen/dp_32"
-            android:scaleType="fitXY"
+            android:scaleType="centerCrop"
             tools:src="@tools:sample/avatars"
             app:layout_constraintEnd_toEndOf="@+id/view27"
             app:layout_constraintStart_toStartOf="@+id/view27"
