1、将MP3播放工具类修改成单列模式 2、优化页面播放过长的MP3的时候导致卡顿的问题 3、讲解内容的截取添加45个字限制 4、今日计划页面的返回跳转，根据勾选内容跳转

--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -152,6 +152,12 @@
         <action
             android:id="@+id/action_planSettingFragment_to_cameraPreviewFragment"
             app:destination="@id/cameraPreviewFragment" />
+        <action
+            android:id="@+id/action_planSettingFragment_to_explanationFragment"
+            app:destination="@+id/ExplanationFragment"/>
+        <action
+            android:id="@+id/action_planSettingFragment_to_GuideFragment"
+            app:destination="@+id/GuideFragment"/>
     </fragment>
     <fragment
         android:id="@+id/callLiftFragment"
