--- a/app/src/main/res/layout/fragment_basic_setting.xml
+++ b/app/src/main/res/layout/fragment_basic_setting.xml
@@ -297,7 +297,7 @@
                 <View
                     android:id="@+id/view3"
                     android:layout_width="@dimen/dp_1010"
-                    android:layout_height="@dimen/dp_232"
+                    android:layout_height="@dimen/dp_370"
                     android:layout_marginTop="@dimen/dp_24"
 
                     android:background="@drawable/setting_item_bg"
@@ -388,6 +388,47 @@
                     app:layout_constraintBottom_toBottomOf="@+id/seekbarVoice"
                     app:layout_constraintStart_toEndOf="@+id/seekbarVoice"
                     app:layout_constraintTop_toTopOf="@+id/seekbarVoice" />
+
+                <TextView
+                    android:id="@+id/textView28"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/dp_92"
+                    android:alpha="0.7"
+                    android:text="@string/Speed_of_speech"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/sp_24"
+                    app:layout_constraintStart_toStartOf="@+id/textView14"
+                    app:layout_constraintTop_toBottomOf="@+id/textView14" />
+
+                <TextView
+                    android:id="@+id/textView30"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/Speed_of_speech_min"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/sp_24"
+                    app:layout_constraintStart_toStartOf="@+id/imageView7"
+                    app:layout_constraintTop_toTopOf="@+id/textView28" />
+
+                <com.sendi.deliveredrobot.view.widget.MySeekBar
+                    android:id="@+id/explain"
+                    android:layout_width="560dp"
+                    android:layout_height="@dimen/dp_48"
+                    app:layout_constraintBottom_toBottomOf="@+id/textView30"
+                    app:layout_constraintStart_toStartOf="@+id/seekbarVoice"
+                    app:layout_constraintTop_toTopOf="@+id/textView30" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/dp_24"
+                    android:text="15"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/sp_24"
+                    app:layout_constraintBottom_toBottomOf="@+id/explain"
+                    app:layout_constraintStart_toEndOf="@+id/explain"
+                    app:layout_constraintTop_toTopOf="@+id/explain" />
 
 
 
