--- a/app/src/main/res/layout/fragment_mode_setting.xml
+++ b/app/src/main/res/layout/fragment_mode_setting.xml
@@ -189,7 +189,7 @@
                 <View
                     android:id="@+id/view11"
                     android:layout_width="@dimen/dp_1010"
-                    android:layout_height="550dp"
+                    android:layout_height="@dimen/dp_370"
                     android:layout_marginTop="24dp"
                     android:background="@drawable/setting_item_bg"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -241,49 +241,49 @@
                     app:layout_constraintStart_toEndOf="@+id/Explanation_speed"
                     app:layout_constraintTop_toTopOf="@+id/Explanation_speed" />
 
-                <TextView
-                    android:id="@+id/textView28"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/dp_92"
-                    android:alpha="0.7"
-                    android:text="@string/Speed_of_speech"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/sp_24"
-                    app:layout_constraintStart_toStartOf="@+id/Speed_explanation_tv"
-                    app:layout_constraintTop_toBottomOf="@+id/Speed_explanation_tv" />
+<!--                <TextView-->
+<!--                    android:id="@+id/textView28"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_marginTop="@dimen/dp_92"-->
+<!--                    android:alpha="0.7"-->
+<!--                    android:text="@string/Speed_of_speech"-->
+<!--                    android:textColor="@color/white"-->
+<!--                    android:textSize="@dimen/sp_24"-->
+<!--                    app:layout_constraintStart_toStartOf="@+id/Speed_explanation_tv"-->
+<!--                    app:layout_constraintTop_toBottomOf="@+id/Speed_explanation_tv" />-->
 
-                <TextView
-                    android:id="@+id/textView30"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/dp_114"
-                    android:text="@string/Speed_of_speech_min"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/sp_24"
-                    app:layout_constraintBottom_toBottomOf="@+id/textView28"
-                    app:layout_constraintStart_toEndOf="@+id/textView28"
-                    app:layout_constraintTop_toTopOf="@+id/textView28" />
+<!--                <TextView-->
+<!--                    android:id="@+id/textView30"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_marginStart="@dimen/dp_114"-->
+<!--                    android:text="@string/Speed_of_speech_min"-->
+<!--                    android:textColor="@color/white"-->
+<!--                    android:textSize="@dimen/sp_24"-->
+<!--                    app:layout_constraintBottom_toBottomOf="@+id/textView28"-->
+<!--                    app:layout_constraintStart_toEndOf="@+id/textView28"-->
+<!--                    app:layout_constraintTop_toTopOf="@+id/textView28" />-->
 
-                <com.sendi.deliveredrobot.view.widget.MySeekBar
-                    android:id="@+id/explain"
-                    android:layout_width="560dp"
-                    android:layout_height="@dimen/dp_48"
-                    android:layout_marginStart="@dimen/dp_24"
-                    app:layout_constraintBottom_toBottomOf="@+id/textView30"
-                    app:layout_constraintStart_toEndOf="@+id/textView30"
-                    app:layout_constraintTop_toTopOf="@+id/textView30" />
+<!--                <com.sendi.deliveredrobot.view.widget.MySeekBar-->
+<!--                    android:id="@+id/explain"-->
+<!--                    android:layout_width="560dp"-->
+<!--                    android:layout_height="@dimen/dp_48"-->
+<!--                    android:layout_marginStart="@dimen/dp_24"-->
+<!--                    app:layout_constraintBottom_toBottomOf="@+id/textView30"-->
+<!--                    app:layout_constraintStart_toEndOf="@+id/textView30"-->
+<!--                    app:layout_constraintTop_toTopOf="@+id/textView30" />-->
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/dp_24"
-                    android:text="15"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/sp_24"
-                    app:layout_constraintBottom_toBottomOf="@+id/explain"
-                    app:layout_constraintStart_toEndOf="@+id/explain"
-                    app:layout_constraintTop_toTopOf="@+id/explain" />
+<!--                <TextView-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_marginStart="@dimen/dp_24"-->
+<!--                    android:text="15"-->
+<!--                    android:textColor="@color/white"-->
+<!--                    android:textSize="@dimen/sp_24"-->
+<!--                    app:layout_constraintBottom_toBottomOf="@+id/explain"-->
+<!--                    app:layout_constraintStart_toEndOf="@+id/explain"-->
+<!--                    app:layout_constraintTop_toTopOf="@+id/explain" />-->
 
                 <TextView
                     android:id="@+id/textView31"
@@ -295,8 +295,8 @@
                     android:visibility="gone"
                     android:textColor="@color/white"
                     android:textSize="@dimen/sp_24"
-                    app:layout_constraintStart_toStartOf="@+id/textView28"
-                    app:layout_constraintTop_toBottomOf="@+id/textView28" />
+                    app:layout_constraintStart_toStartOf="@+id/Speed_explanation_tv"
+                    app:layout_constraintTop_toBottomOf="@+id/Speed_explanation_tv" />
 
 
                 <TextView
@@ -308,7 +308,7 @@
                     android:textSize="@dimen/sp_24"
                     android:visibility="gone"
                     app:layout_constraintBottom_toBottomOf="@+id/textView31"
-                    app:layout_constraintStart_toStartOf="@+id/textView30"
+                    app:layout_constraintStart_toStartOf="@+id/Speed_explanation_tv"
                     app:layout_constraintTop_toTopOf="@+id/textView31" />
 
                 <com.sendi.deliveredrobot.view.widget.MySeekBar
