--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -642,4 +642,9 @@
             app:destination="@id/ExplanationFragment" />
     </fragment>
 
+    <fragment
+        android:id="@+id/businessFragment"
+        android:name="com.sendi.deliveredrobot.view.fragment.BusinessFragment"
+        android:label="businessFragment"/>
+
 </navigation>
