--- a/app/src/main/res/drawable/setting_bg.xml
+++ b/app/src/main/res/drawable/setting_bg.xml
@@ -1,14 +1,11 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="false">
-        <shape >
-            <solid android:color="#663B37A7" />
-            <corners android:bottomLeftRadius="@dimen/dp_12" android:bottomRightRadius="@dimen/dp_12" android:topLeftRadius="@dimen/dp_12" android:topRightRadius="@dimen/dp_12" />
-        </shape>
-    </item>
-    <item android:state_pressed="true">
-        <shape >
-            <solid android:color="#665B37A7" />
-            <corners android:bottomLeftRadius="@dimen/dp_12" android:bottomRightRadius="@dimen/dp_12" android:topLeftRadius="@dimen/dp_12" android:topRightRadius="@dimen/dp_12" />
+    <item>
+        <shape>
+            <solid android:color="#663B37A7"/>
+            <corners   android:bottomRightRadius="@dimen/dp_12"
+                android:topRightRadius="@dimen/dp_12"
+                android:topLeftRadius="@dimen/dp_12"
+                android:bottomLeftRadius="@dimen/dp_12"/>
         </shape>
     </item>
 </selector>
