--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -95,10 +95,10 @@
             android:id="@+id/SurfaceView"
             android:layout_width="1dp"
             android:layout_height="1dp"
-            app:layout_constraintStart_toStartOf="@+id/imageView8"
-            app:layout_constraintTop_toTopOf="@+id/imageView8" />
+            app:layout_constraintStart_toStartOf="@+id/microphone"
+            app:layout_constraintTop_toTopOf="@+id/microphone" />
         <ImageView
-            android:id="@+id/imageView8"
+            android:id="@+id/microphone"
             android:layout_width="@dimen/dp_40"
             android:layout_height="@dimen/dp_40"
             android:layout_marginStart="@dimen/dp_48"
@@ -108,7 +108,7 @@
             app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
-            android:id="@+id/textView61"
+            android:id="@+id/bubbleTv"
             android:layout_width="@dimen/dp_320"
             android:layout_height="@dimen/dp_40"
             android:layout_marginStart="@dimen/dp_14"
@@ -118,15 +118,15 @@
             android:text="@string/ask"
             android:textColor="@color/white"
             android:textSize="@dimen/sp_24"
-            app:layout_constraintBottom_toBottomOf="@+id/imageView8"
-            app:layout_constraintStart_toEndOf="@+id/imageView8" />
+            app:layout_constraintBottom_toBottomOf="@+id/microphone"
+            app:layout_constraintStart_toEndOf="@+id/microphone" />
 
         <ImageView
             android:layout_width="@dimen/dp_6"
             android:layout_height="@dimen/dp_7"
             android:src="@drawable/rt_horn"
-            app:layout_constraintBottom_toBottomOf="@+id/textView61"
-            app:layout_constraintEnd_toStartOf="@+id/textView61" />
+            app:layout_constraintBottom_toBottomOf="@+id/bubbleTv"
+            app:layout_constraintEnd_toStartOf="@+id/bubbleTv" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
