1、添加待命点、充电点上报告 2、添加导购（业务办理）任务队列 3、添加根据type和名字查询点的信息SQL 4、添加业务办理任务上报告

--- a/app/src/main/res/layout/item_business.xml
+++ b/app/src/main/res/layout/item_business.xml
@@ -6,17 +6,17 @@
     android:id="@+id/bg_con"
     android:layout_width="@dimen/dp_256"
     android:layout_height="@dimen/dp_198"
-    android:background="@drawable/bg_explanation_item"
     android:gravity="center">
 
     <TextView
         android:id="@+id/business_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_width="@dimen/dp_256"
+        android:layout_height="@dimen/dp_198"
+        android:gravity="center"
+        android:background="@drawable/bg_business_item"
         android:alpha="0.9"
         android:text="@string/business"
-        android:textColor="@color/white"
+        android:textColor="@drawable/text_select_bg"
         android:textSize="@dimen/sp_36"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
