--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -19,6 +19,8 @@
             android:layout_width="match_parent"
             android:layout_height="462dp"
             android:layout_marginTop="17dp"
+            android:layout_marginStart="@dimen/dp_104"
+            android:layout_marginEnd="@dimen/dp_104"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView59" />
