--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -19,8 +19,6 @@
             android:layout_width="match_parent"
             android:layout_height="462dp"
             android:layout_marginTop="17dp"
-            android:layout_marginStart="@dimen/dp_104"
-            android:layout_marginEnd="@dimen/dp_104"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView59" />
@@ -97,10 +95,10 @@
             android:id="@+id/SurfaceView"
             android:layout_width="1dp"
             android:layout_height="1dp"
-            app:layout_constraintStart_toStartOf="@+id/microphone"
-            app:layout_constraintTop_toTopOf="@+id/microphone" />
+            app:layout_constraintStart_toStartOf="@+id/imageView8"
+            app:layout_constraintTop_toTopOf="@+id/imageView8" />
         <ImageView
-            android:id="@+id/microphone"
+            android:id="@+id/imageView8"
             android:layout_width="@dimen/dp_40"
             android:layout_height="@dimen/dp_40"
             android:layout_marginStart="@dimen/dp_48"
@@ -110,7 +108,7 @@
             app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
-            android:id="@+id/bubbleTv"
+            android:id="@+id/textView61"
             android:layout_width="@dimen/dp_320"
             android:layout_height="@dimen/dp_40"
             android:layout_marginStart="@dimen/dp_14"
@@ -120,15 +118,15 @@
             android:text="@string/ask"
             android:textColor="@color/white"
             android:textSize="@dimen/sp_24"
-            app:layout_constraintBottom_toBottomOf="@+id/microphone"
-            app:layout_constraintStart_toEndOf="@+id/microphone" />
+            app:layout_constraintBottom_toBottomOf="@+id/imageView8"
+            app:layout_constraintStart_toEndOf="@+id/imageView8" />
 
         <ImageView
             android:layout_width="@dimen/dp_6"
             android:layout_height="@dimen/dp_7"
             android:src="@drawable/rt_horn"
-            app:layout_constraintBottom_toBottomOf="@+id/bubbleTv"
-            app:layout_constraintEnd_toStartOf="@+id/bubbleTv" />
+            app:layout_constraintBottom_toBottomOf="@+id/textView61"
+            app:layout_constraintEnd_toStartOf="@+id/textView61" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
