--- a/app/src/main/res/layout/home_page.xml
+++ b/app/src/main/res/layout/home_page.xml
@@ -407,6 +407,8 @@
 
         <LinearLayout
             android:id="@+id/view4"
+            android:layout_marginStart="@dimen/dp_104"
+            android:layout_marginEnd="@dimen/dp_104"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal"
